corpus/binary
=====
Union
=====

fact { a + b & c }

---

(source_file
  (fact_decl
    (block
      (binary_expression
        left: (name)
        right: (binary_expression
          left: (name)
          right: (name)
        )))))

=====
Comparison
=====

fact {
  A not in B
}

---

(source_file
  (fact_decl
    (block
      (binary_expression
        left: (name)
        right: (name)))))
