corpus/unary
=====
Union
=====

fact {
  no A
  always B
  ~C
  ^D
  *E
}

---

(source_file
  (fact_decl
    (block
      (unary_expression
        (qual_name))
      (unary_expression
        (qual_name))
      (unary_expression
        (qual_name))
      (unary_expression
        (qual_name))
      (unary_expression
        (qual_name)))))


====
Precedence
====

fact {
  no A & B
}

---

(source_file
  (fact_decl
    (block
      (unary_expression
        (binary_expression
          (qual_name)
          (qual_name))))))

====
Prime
====

fact {
  a.b'
}

---

(source_file
  (fact_decl
    (block
      (binary_expression
        (qual_name)
        (prime_expression
          (qual_name))))))
